--- a/projects/templates/projects/project_form_base.html
+++ b/projects/templates/projects/project_form_base.html
@@ -1,41 +1,42 @@
 {% extends 'form_base.html' %}
 
 {% block form_fields %}
-<div class="required field">
-                <label>Project Name</label>
-                {{form.name}}
-            </div>
-            <div class="two fields">
-                <div class="required field">
-                    <label>Hackathon</label>
-                    {{ form.hackathon }}
-                </div>
-                <div class="required field">
-                    <label>Author</label>
-                    {{ form.author }}
-                </div>
-            </div>
-            <div class="required field">
-                <label>Description</label>
-                {{ form.description }}
-            </div>
-            <div class="two fields">
-                <div class="required field">
-                    <label>Min. people</label>
-                    {{ form.min_participants }}
-                </div>
-                <div class="required field">
-                    <label>Max. people</label>
-                    {{ form.max_participants }}
-                </div>
-            </div>
-            <div class="field">
-                <label>Skills required</label>
-                {{ form.skills }}
-            </div>
-            <div class="field">
-                <label>Tags</label>
-                {{ form.tags }}
-            </div>
-            <button class="ui button" type="submit">Submit</button>
+    <div class="required field">
+        <label>Project Name</label>
+        {{form.name}}
+    </div>
+    <div class="two fields">
+        <div class="required field">
+            <label>Hackathon</label>
+            {{ form.hackathon }}
+        </div>
+        <div class="required field">
+            <label>Author</label>
+            {{ form.author }}
+        </div>
+    </div>
+    <div class="required field">
+        <label>Description</label>
+        {{ form.description }}
+    </div>
+    <div class="two fields">
+        <div class="required field">
+            <label>Min. people</label>
+            {{ form.min_participants }}
+        </div>
+        <div class="required field">
+            <label>Max. people</label>
+            {{ form.max_participants }}
+        </div>
+    </div>
+    <div class="field">
+        <label>Skills required</label>
+        {{ form.skills }}
+    </div>
+    <div class="field">
+        <label>Tags</label>
+        {{ form.tags }}
+    </div>
+    {% block delete_button %}{% endblock %}
+    <button class="ui button" type="submit">Submit</button>
 {% endblock %}
