--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     {% if request.user.is_authenticated %}
         <div class="item"><a href="{% url 'auth_logout' %}?next={{request.path}}"><div class="ui button top right">Logout</div></a></div>
     {% else %}
-        <div class="item"><div class="ui primary button">Sign up</div></div>
+        <div class="item"><a href="{% url 'auth_signup' %}"><div class="ui primary button">Sign up</div></a></div>
         <div class="item"><a href="{% url 'auth_login' %}?next={{ request.path }}"><div class="ui button">Log-in</div></a></div>
     {% endif %}
     {% endblock %}
